2005-12-08  Jan Beulich  <jbeulich@novell.com>

	* i386-dis.c (OP_ST): Remove prefix in Intel mode.

2005-12-08  Daniel Jacobowitz  <dan@codesourcery.com>

	* i386-dis.c (dofloat): Handle %rip-relative floating point addressing.

2005-12-07  Hans-Peter Nilsson  <hp@axis.com>

	* cris-opc.c (cris_opcodes) <"move" "s,P">: Define using
	MOVE_M_TO_PREG_OPCODE and MOVE_M_TO_PREG_ZBITS instead of constants.

2005-12-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/1874
	* i386-dis.c (address_mode): New enum type.
	(address_mode): New variable.
	(mode_64bit): Removed.
	(ckprefix): Updated to check address_mode instead of mode_64bit.
	(prefix_name): Likewise.
	(print_insn): Likewise.
	(putop): Likewise.
	(print_operand_value): Likewise.
	(intel_operand_size): Likewise.
	(OP_E): Likewise.
	(OP_G): Likewise.
	(set_op): Likewise.
	(OP_REG): Likewise.
	(OP_I): Likewise.
	(OP_I64): Likewise.
	(OP_OFF): Likewise.
	(OP_OFF64): Likewise.
	(ptr_reg): Likewise.
	(OP_C): Likewise.
	(SVME_Fixup): Likewise.
	(print_insn): Set address_mode.
	(PNI_Fixup): Add 64bit and address size override support for
	monitor and mwait.

2005-12-06  Hans-Peter Nilsson  <hp@axis.com>

	* cris-dis.c (bytes_to_skip): Handle new parameter prefix_matchedp.
	(print_with_operands): Check for prefix when [PC+] is seen.

2005-12-02  Dave Brolley  <brolley@redhat.com>

	* configure.in (cgen_files): Add cgen-bitset.lo.
	(ta): Add cgen-bitset.lo when arch==bfd_cris_arch.
	* Makefile.am (CFILES): Add cgen-bitset.c.
	(ALL_MACHINES): Add cgen-bitset.lo.
	(cgen-bitset.lo): New target.
	* cgen-opc.c (cgen_bitset_create, cgen_bitset_init, cgen_bitset_clear)
	(cgen_bitset_add, cgen_bitset_set, cgen_bitset_contains)
	(cgen_bitset_compare, cgen_bitset_intersect_p, cgen_bitset_copy)
	(cgen_bitset_union): Moved from here ...
	* cgen-bitset.c: ... to here. New file.
	* Makefile.in: Regenerated.
	* configure: Regenerated.

2005-11-22  James E Wilson  <wilson@specifix.com>

	* ia64-gen.c (_opcode_int64_low, _opcode_int64_high,