@@ -1,5 +1,10 @@
 2005-12-08  Jan Beulich  <jbeulich@novell.com>
 
+	* i386-dis.c (MAXLEN): Reduce to architectural limit.
+	(fetch_data): Check for sufficient buffer size.
+
+2005-12-08  Jan Beulich  <jbeulich@novell.com>
+
 	* i386-dis.c (OP_ST): Remove prefix in Intel mode.
 
 2005-12-08  Daniel Jacobowitz  <dan@codesourcery.com>
